# attackmap-analyzer-terraform

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/attackmap_analyzer_terraform/: __init__.py  analyzer.py  contracts.py
tests/: test_terraform_analyzer.py
