[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attackmap-analyzer-terraform"
version = "0.1.0"
description = "Terraform / HCL infrastructure-as-code analyzer plugin for AttackMap (AWS, Azure, GCP resources; IAM wildcards; open security groups; secret resources)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "AttackMap Contributors"}
]
dependencies = [
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
core = [
  "attackmap>=0.1.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.entry-points."attackmap.analyzers"]
terraform = "attackmap_analyzer_terraform:TerraformAnalyzer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
